@@ -31,7 +31,8 @@ version 2.7.8 (??/??/????):
 	  characters. (#8508)
 	* Fix receiving messages from users on Yahoo and other federated
 	  services. (#13022)
-	* Correctly remove old endpoints when they sign out.
+	* Correctly remove old endpoints from the list when they sign out.
+	* Add option to disable connections from multiple locations. (#13017)
 
 version 2.7.7 (11/23/2010):
 	General:
